2007-10-03  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dir.m: Handle symbolic links in compatible way.
	Use S_ISDIR (st.mode) instead of checking st.modestr(1) == "d".

	* linear-algebra/Makefile.in (SOURCES): Rename norm.m to __norm__.m.
	* linear-algebra/__norm__.m: Rename from norm.m.  Eliminate
	special for __vnorm__.

2007-10-03  Quentin Spencer  <qspencer@ieee.org>

	* linear-algebra/norm.m: Special case vector 1-norm and 2-norm.

2007-10-03  David Bateman  <dbateman@free.fr>

	* pkg/pkg.m (is_architecture_dependent): New function to identify
	if a file is architecture dependent based on a list of file
	extensions.
	(configure_make): Simplify the search for architecture dependent
	files based on this function.
	(load_pakages_and_dependencies): Also look for bin directory in
	the architecture dependent directory.

2007-10-03  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dir.m: Create empty struct with field names.
	Include datenum in struct.
	
2007-10-02  David Bateman  <dbateman@free.fr>

	* miscellaneous/ls.m: If nargout return string array of files
	returned by ls.

2007-10-01  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Use %.15e instead of %.15g when setting
	range values.

2007-10-01  David Bateman  <dbateman@free.fr>

        * linear-algebra/norm.m: Inline the isvector(x) calculation for
	speed with small vectors.
	* pkg/pkg.m (archprefix): Set using octave_config_info("libexecdir") 
	rather than OCTAVE_HOME().

2007-09-30  Ben Abbott  <bpabbott@mac.com>

	* plot/findobj.m: New function.
	* plot/Makefile.m (SOURCES): Add it to SOURCES.

2007-09-26  David Bateman  <dbateman@free.fr>

	* pkg/pkg.m: Add second argument to setting for prefix for
	architecture dependent files. Use throughout.
	(pkg:issuperuser): New function, use through to check for
	root user.
	(pkg:getarchprefix): function to give the archiecture dependent
	prefix for a package.
	(pkg:getarchdir): New function giving location of architetcure