@@ -25,25 +25,22 @@
 
 function rgb = __next_line_color__ (reset)
 
-  persistent color_rotation = [ 0,    0,    1;
-				0,    0.5,  0;
-				1,    0,    0;
-				0,    0.75, 0.75;
-				0.75, 0,    0.75;
-				0.75, 0.75, 0;
-				0.25, 0.25, 0.25];
-
-  persistent num_colors = rows (color_rotation);
-  persistent color_index = 1;
+  persistent color_rotation;
+  persistent num_colors;
+  persistent color_index;
 
   if (nargin < 2)
     if (nargin == 1 && reset)
+      color_rotation = get (gca (), "colororder");
+      num_colors = rows (color_rotation);
       color_index = 1;
-    else
+    elseif (! isempty (color_rotation))
       rgb = color_rotation(color_index,:);
       if (++color_index > num_colors)
 	color_index = 1;
       endif
+    else
+      error ("__next_line_color__: color_rotation not initialized");
     endif
   else
     print_usage ();
